--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(test_tcp_size)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(test_tcp_size main.cpp tcp_echo_server.cpp)
+add_executable(test_tcp_size main.cpp tcp_echo_server.cpp sender.cpp)
 
 target_link_libraries(test_tcp_size
         "/usr/lib/x86_64-linux-gnu/libciul1.a"
