--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(test_tcp_size main.cpp tcp_echo_server.cpp addr.h)
 
+include_directories(/home/gleb/Downloads/OO/onload-7.1.0.265/src/lib/ciul/
+        /home/gleb/Downloads/OO/onload-7.1.0.265/src/include)
+
 target_link_libraries(test_tcp_size
         "/usr/lib/x86_64-linux-gnu/libciul1.a"
         "/usr/lib/x86_64-linux-gnu/libonload_zf_static.a")
