--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(test_tcp_size)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(test_tcp_size main.cpp tcp_echo_server.cpp addr.h)
+add_executable(test_tcp_size main.cpp tcp_server.cpp addr.h)
 
 include_directories(/home/gleb/Downloads/OO/onload-7.1.0.265/src/lib/ciul/
         /home/gleb/Downloads/OO/onload-7.1.0.265/src/include
